[package]
name = "sparql-client-rust"
version = "0.1.0"
authors = ["ben <007vasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features = ["blocking","json"] }
xmlJSON = "0.2.0"